--- a/style.css
+++ b/style.css
@@ -2048,6 +2048,7 @@
             font-weight:300;
             font-size:12px;
             color:#fff;
+            margin-bottom: 0;
         }
 	.footer-top{
 		padding-top: 40px;
@@ -2142,4 +2143,11 @@
             font-weight:100;
             font-size:2.8em;
         }
-
+  .terms--policy a {
+  	text-transform: uppercase;
+  	font-size: 14px;
+    color: #828995;
+    display: inline-block;
+		margin-left: 15px;
+		margin-right: 15px;
+  }
