fixing sidebar popular post

--- a/style.css
+++ b/style.css
@@ -1700,6 +1700,7 @@
 
 /* === Widgets === */
 
+	#popular-post-base-on-google-analytic,
 	.primary-sidebar .widget {
 		margin: 0 0 20px;
 		background-color: #fff;
