--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-/* lg */ 
+/* lg */
 @media (min-width: 1200px) {
 
 }
@@ -14,6 +14,7 @@
 
 /* sm */
 @media (min-width: 768px) and (max-width: 991px) {
+	#popular-post-base-on-google-analytic,
 	.primary-sidebar .widget{
 		margin-left: 0;
 	}
@@ -57,6 +58,7 @@
 		margin-top: 50px;
 	}
 
+	#popular-post-base-on-google-analytic,
 	.primary-sidebar .widget{
 		margin-left: 0;
 	}
