hide fb and twitte on mobile device

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -40,6 +40,11 @@
 	  display: block;
 	}
 
+	.widget_facebook_likebox,
+	.widget_twitter_timeline {
+		display: none;
+	}
+
 	.padding-content{
 		padding: 15px;
 	}
