--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 
 	body {
 		margin: 0;
-		font-family: 'sf_ui_displayregular', Arial, sans-serif;
+		font-family: 'Open Sans', Arial, sans-serif;
                 letter-spacing: .03em;
 	}
 
@@ -242,7 +242,7 @@
 	input,
 	select,
 	textarea {
-		font-family: 'sf_ui_displayregular', Arial, sans-serif;
+		font-family: 'Open Sans', Arial, sans-serif;
 		font-weight:400;
 		line-height: 23px;
 		background: #f1f1f1;
@@ -1394,7 +1394,7 @@
 	#comments .comment-author{
 		margin-top: 0;
 		margin-bottom: 5px;
-		font-family: 'sf_ui_displayregular', sans-serif;
+		font-family: 'Open Sans', sans-serif;
 		font-weight: 400;
 		font-size: 18px;
 		letter-spacing: .30px;
@@ -1877,7 +1877,8 @@
 
 	/* Latest Posts*/
 		.widget .latest-posts .entry-title a{
-			color: #555555;
+			color: rgba(0,0,0,.7);
+			font-weight: 500
 		}
 
 		.widget .latest-posts .entry-title a:hover{
@@ -1886,7 +1887,7 @@
 
 		.widget .latest-posts .entry-title {
 	        font-size: 14px;
-	        font-family: 'sf_ui_displayregular', sans-serif;
+	        font-family: 'Open Sans', sans-serif;
 	        line-height: normal;
 	        margin-top: 0;
 			margin-bottom: 5px;
@@ -2230,13 +2231,10 @@
   padding-right: 0 !important;
   width: 100px !important;
 }
-.rad_rapidology .rad_rapidology_optin div {
-	display: none !important;
-}
+
 #wpdevar_comment_1 {
 	margin-top: 30px
 }
-
 
 .home .entry-content p:last-child,
 .category .entry-content p:last-child {
