--- a/assets/css/slicknav.css
+++ b/assets/css/slicknav.css
@@ -54,7 +54,7 @@
 
 /* Button Lines */
 .slicknav_menu .slicknav_icon-bar {
-  background-color: #ffffff;
+  background-color: #424242;
 }
 .slicknav_menu {
     padding:6px;
