--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@
 		box-shadow: 0px 1px 3px rgba(190, 190, 190, 0.5);
 		position: relative;
 		z-index: 10;
-		background-color: rgba(0,0,0,.8);
+		background-color: #fff;
 		height: 60px;
 	}
 
@@ -568,7 +568,7 @@
 		font-family: 'sf_ui_displaylight', sans-serif;
 		font-weight:600;
 		text-transform: uppercase;
-		color: #ffffff;
+		color: #424242;
 		display:block;
 		line-height: 60px;
 		-o-transition:.3s;
