--- a/style.css
+++ b/style.css
@@ -2044,8 +2044,8 @@
 /* === Footer === */
 
 	#footer{
-            color:#eee;
-		background-color: #363d48;
+            color:#424242;
+		background-color: #fff;
 		box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
 	}
         #footer .widget-title{
@@ -2058,7 +2058,7 @@
 		padding-top: 40px;
 		padding-bottom: 40px;
 		overflow: hidden;
-                border-bottom:1px solid #494f59;
+                border-bottom:1px solid #ddd;
                 font-size:12px;
 	}
 
@@ -2069,7 +2069,7 @@
         }
         .footer-top .menu li a{
             font-family: 'sf_ui_displaylight', sans-serif;
-            color:#828995;
+            color:#666;
             font-size:14px;
             font-weight:100;
             text-transform:none;
@@ -2100,7 +2100,7 @@
 	.copy-right-text{
 		padding-top: 20px;
 		padding-bottom: 20px;
-		background-color: #363d48;
+		background-color: #fff;
 		color: #eee;
                 font-size:11px;
                 font-family: 'sf_ui_displaylight', Arial, sans-serif;
