fixing footer menu copyright text & terms policy menu

--- a/style.css
+++ b/style.css
@@ -2101,8 +2101,7 @@
 		padding-top: 20px;
 		padding-bottom: 20px;
 		background-color: #fff;
-		color: #eee;
-                font-size:11px;
+		color: #424242;
                 font-family: 'sf_ui_displaylight', Arial, sans-serif;
 	}
 
