--- a/style.css
+++ b/style.css
@@ -2101,9 +2101,8 @@
 		padding-top: 20px;
 		padding-bottom: 20px;
 		background-color: #fff;
-		color: #eee;
-                font-size:11px;
-                font-family: 'sf_ui_displaylight', Arial, sans-serif;
+		color: #424242;
+    font-family: 'sf_ui_displaylight', Arial, sans-serif;
 	}
 
 	.copy-right-text p{
